# medicaid_rfp_analysis

./: CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  codebook.md  generate_figures.py  interim_analysis.py  phase1_document_inventory.py  pyproject.toml  requirements.txt  test_data_integrity.py  thematic_analysis.py
data/: README.md
docs/: data_dictionary.csv
outputs/: README.md  sample_claim_summary.json  sample_claims.csv
scripts/: README.md  generate_manuscript_data.py  normalized_concordance_analysis.py  phase1b_extract_documents.py  phase2_document_analysis.py  run_full_analysis.py
